--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Fredrik Bagge Carlson <baggepinnen@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+Clustering = "aaaa29a8-35af-508c-8bc3-b662a17a0fe5"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 
 [compat]
